--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.glassfish.jersey.archetypes</groupId>
+            <artifactId>jersey-heroku-webapp</artifactId>
+            <version>2.22.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
             <!-- use the following artifactId if you don't need servlet 2.x compatibility -->
